# MemAI

./: .gitignore  LICENSE  README.md  install.bat  pyproject.toml  run-admin.bat
src/memai/: admin.py  db.py  embed.py  server.py
src/memai/webui/: admin.css  app.js  i18n.js  index.html
src/memai/webui/i18n/: en.json  pt-BR.json
tests/: conftest.py  test_admin.py  test_db.py  test_domain_casing.py  test_features.py  test_optimize.py  test_vec.py
